--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/gsap": "^1.20.2",
     "express": "^5.1.0",
     "gsap": "^3.13.0",
+    "ngx-image-cropper": "^9.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
