--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/ssr": "^20.2.1",
     "@tailwindcss/postcss": "^4.1.16",
     "@types/gsap": "^1.20.2",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "gsap": "^3.13.0",
     "ngx-image-cropper": "^9.1.5",
